--- a/composer.json
+++ b/composer.json
@@ -19,11 +19,11 @@
         }
     ],
     "require": {
-        "php": "^8.0",
+        "php": "^8.0|^8.1",
         "elipzis/laravel-simple-setting": "^1.0",
         "epartment/nova-dependency-container": "^1.3",
-        "laravel/framework": "^8.0",
-        "laravel/nova": "^3.0"
+        "laravel/framework": "^10.0",
+        "laravel/nova": "^4.0"
     },
     "autoload": {
         "psr-4": {
